dispatcher fix on mobile no showing after reset

--- a/src/app/core/components/emergency-details/emergency-details.component.scss
+++ b/src/app/core/components/emergency-details/emergency-details.component.scss
@@ -44,7 +44,6 @@ mat-icon.mat-icon.notranslate.logs_btn.mat-primary.material-icons {
 
     .dispatcherWrapper {
         position: relative;
-        right:13rem;
     }
 }
 
